  * matchexpression: New plumbing command to check if a preferred content
    expression matches some data.
  * Removed the webapp-secure build flag, rolling it into the webapp build
    flag.
  * Removed the quvi and tahoe build flags, which only adds aeson to
    the core dependencies.
  * Removed the feed build flag, which only adds feed to the core
    dependencies.

 -- Joey Hess <id@joeyh.name>  Fri, 15 Jan 2016 14:05:01 -0400

git-annex (6.20160114) unstable; urgency=medium

  "hexapodia as the key insight"

  * Added v6 repository mode, but v5 is still the default for now.
  * unlock, lock: In v6 mode, unlocking a file changes it from a symlink to a
    pointer file, and this change can be committed to the git repository.
    For details, see http://git-annex.branchable.com/tips/unlocked_files/
  * The upgrade to version 6 is not done fully automatically yet, because
    upgrading a direct mode repository to version 6 will prevent old
    versions of git-annex from working in other clones of that repository.
    For details, see http://git-annex.branchable.com/upgrades/
  * init: --version parameter added to control which supported repository
    version to use.
  * init, upgrade: Configure .git/info/attributes to use git-annex
    as a smudge filter. In v6 repository mode, this makes git add
    add files to the annex in unlocked mode, unless overridden by
    annex.largefiles configuration.
  * assistant: In v6 mode, adds files in unlocked mode, so they can
    continue to be modified.
  * Added annex.thin setting, which makes unlocked files in v6 repositories
    be hard linked to their content, instead of a copy. This saves disk
    space but means any modification of an unlocked file will lose the local
    (and possibly only) copy of the old version.
  * Enable annex.thin by default on upgrade from direct mode to v6, since
    direct mode made the same tradeoff.
  * fix: Adjusts unlocked files as configured by annex.thin.