@@ -24,6 +24,7 @@ git-annex (6.20160115) UNRELEASED; urgency=medium
     the core dependencies.
   * Removed the feed build flag, which only adds feed to the core
     dependencies.
+  * Roll the dns build flag into the assistant build flag.
 
  -- Joey Hess <id@joeyh.name>  Fri, 15 Jan 2016 14:05:01 -0400
 
